crates/plotnik-lib/tests/02-parser/recovery_unexpected/bare_capture_at_root.txt
@name
==== diagnostics ====
error: unexpected token
 --> query.ptk:1:1
  |
1 | @name
  | ^^^^^
  |
help: try `(node)`, `[a b]`, `{a b}`, `"literal"`, or `_`
